abstract public class Canard {

	public void cancaner() {
		System.out.println("Je cancane!");
	}

	public void nager() {
		System.out.println("Je nage comme un Canard!");
	}

	abstract public void afficher();
	
	public void voler() {
		System.out.println("Je vole avec des ailes!");
	}
}